==============
lxml changelog
==============

2.1alpha1 (Under development)
=============================

Features added
--------------

* ``XSLTAccessControl`` instances have a property ``options`` that
  returns a dict of access configuration options.

* Constant instances ``DENY_ALL`` and ``DENY_WRITE`` on
  ``XSLTAccessControl`` class.

* Extension elements for XSLT (experimental!)

* ``Element.base`` property returns the xml:base or HTML base URL of
  an Element.

* ``docinfo.URL`` property is writable.

Bugs fixed
----------

* Attribute assignment of custom PyTypes in objectify could fail to
  correctly serialise the value to a string.

* Default encoding for plain text serialisation was different from
  that of XML serialisation (UTF-8 instead of ASCII).

Other changes
-------------

* Setting the XSLT_CONFIG and XML2_CONFIG environment variables at
  build time will let setup.py pick up the ``xml2-config`` and
  ``xslt-config`` scripts from the supplied path name.

* Passing ``--with-xml2-config=/path/to/xml2-config`` to setup.py will
  override the ``xml2-config`` script that is used to determine the C
  compiler options.  The same applies for the ``--with-xslt-config``
  option.

* Minor API speed-ups.

* The benchmark suite now uses tail text in the trees, which makes the
  absolute numbers incomparable to previous results.

* Generating the HTML documentation now requires Pygments_, which is
  used to enable syntax highlighting for the doctest examples.

.. _Pygments: http://pygments.org/

Most long-time deprecated functions and methods were removed:

- ``etree.clearErrorLog()``, use ``etree.clear_error_log()``

- ``etree.useGlobalPythonLog()``, use
  ``etree.use_global_python_log()``

- ``etree.ElementClassLookup.setFallback()``, use
  ``etree.ElementClassLookup.set_fallback()``

- ``etree.getDefaultParser()``, use ``etree.get_default_parser()``

- ``etree.setDefaultParser()``, use ``etree.set_default_parser()``
